kube-grafana/kube-grafana-services.yaml
---
# Source: cost-analyzer/templates/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: observability
  labels:
    app: grafana
    release: kubecost
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - name: tcp-service
      port: 80
      protocol: TCP
      targetPort: 3000

  selector:
    app: grafana
    release: kubecost
